# wahoo_plane

./: .gitignore  4x4-3-2-1.plan  README.md  WEB_APP_PLAN.md  debug_timing.py  intervall.plan  plot_intervals.py  pyproject.toml  setup.ps1  test.plan  test2.plan  test_plot.py  wahoo.py  yaml_to_plan.py
example/: 4x4-3-2-1.yaml  4x4-3-2-1_generated_by_library.plan  example.md  plan_file_description.md  plan_file_format.md
src/wahoo_plane/: cli.py  interactive_workout.py
tests/: test_cli.py  test_yaml_to_plan.py
